	  (David Benbennick).
	- Silence annoying compiler messages about clobbering and 
	  uninitialized variables by moving variable inits to the top
	  of main() and re-initializing them after the sigsetjmp().
- rcfile.c:
  colortoint()
	- Don't bomb after invalid color and print bad color name
	  (David Benbennick).
  colortoint, parse_colors()
	- Don't add strings with invalid fg colors at all.
- search.c:
  do_gotoline()
	- Only goto_abort() if we *didnt* abort the command, making
	  the function seem horribly misnamed ;-) (David Benbennick).
- winio.c:
  browser_init(), striponedir(), do_browse_from()
	- Various memory leak fixes (David Benbennick).
  do_yesno(), do_help()
	- Add defined(NCURSES_MOUSE_VERSION) to macro so systems that
	  don't understand MEVENT will compile.
  nanogetstr()
	- Remove unnecessary reset of x since it is now handled
	  elsewhere (David Lawrence Ramsey).
  statusq()
	- Always blank the statusbar on exit (David Benbennick).
- nano.1, nano.1.html:
	- Add initialization file comments, change some options from 
	  bracketed to underlined to emphasize that they are not 
	  optional.
	- Add SEE ALSO section (Jordi).
- nanorc.5:
	- Add nanorc manpage, with descriptions of all available commands
	  (Jordi).
- nanorc.sample:
	- Make nanorc entry less tolerant of invalid colors.
- nano.spec.in:
	- Change default flags to --enable-all.
- THANKS:
	- Add Kalle Kivimaa and Kalle Olavi Niemitalo, for Finnish (Jordi).

GNU nano 1.1.99pre2 - 2003.02.03
- General:
	- Changed some translatable debug messages to use %s 
	  instead of the function name, and removed gettext from 
	  two strings that had no actual words in them that
	  should be translated.	 Suggested originally by
	  Christian Rose.
	- Fix subexpression replacement to work consistently.
	  Affects search.c:replace_regexp() and 
	  utils.c:strstrwrapper() (David Benbennick).
	- Fix cursor position being saved when escaping out 
	  of nanogetstr with keys like ^Y and ^V.  New arg